--- a/src/templates/button.latte
+++ b/src/templates/button.latte
@@ -2,7 +2,7 @@
 <a
     {if !empty($id)}id="{$id}"{/if}
     class="{if empty($class)}btn {if $outline==true}btn-outline-{$type}{else}btn-{$type}{/if}{if empty($size)} btn-{$size}{/if}{if $block==true} btn-block{/if}{if $active==true} active{/if}{if $disabled==true} disabled{/if}{else}{$class}{/if}{if $ajax==true}ajax{/if}"
-    href="{$text|noescape}"
+    href="{$href|noescape}"
     {if $disabled==true} tabindex="-1"{/if}
     role="button"
     {if $active==true} aria-pressed="true"{/if}
