ButtonGroup & Button Toolbar

--- a/src/templates/breadcrumbs.latte
+++ b/src/templates/breadcrumbs.latte
@@ -2,7 +2,7 @@
 <nav aria-label="breadcrumb" {if !empty($id)}id="{$id}"{/if} {foreach $attributes as $key=>$value}{$key}='{$value}' {/foreach}>
     <ol class="breadcrumb">
         {foreach $items as $name=>$item}
-            {control item-$name}
+            {control $name}
         {/foreach}
     </ol>
 </nav>
