--- a/src/templates/dropdown.latte
+++ b/src/templates/dropdown.latte
@@ -2,8 +2,8 @@
 <div class="dropdown">
     {control button}
     <div class="dropdown-menu" aria-labelledby="{$id}">
-        {foreach $items as $_id=>$item}
-            {control item-$_id}
+        {foreach $items as $name=>$item}
+            {control $name}
         {/foreach}
     </div>
 </div>
